# ironclad

./: .gitignore  Cargo.toml  LICENSE  README.md  setup_deps.bat
src/: main.rs
src/error/: error_from.rs  mod.rs
src/project/: compile_unit.rs  compiler_opts.rs  mod.rs
test_project/: ironclad.toml
tests/: parse_test.rs
