[package]
name = "ironclad"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Dmytro Lytovchenko <dmytro.lytovchenko@gmail.com>"]
description = "Erlang Code Quality, Code Style and Type Inference Tool"
homepage = "https://github.com/kvakvs/ironclad"
repository = "https://github.com/kvakvs/ironclad"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Erlang syntax preprocessor and parser
#erl_parse = { git = "https://github.com/ironclause/erl_parse.git" }
erl_parse = { path = "deps/erl_parse" }
#erl_pp = { git = "https://github.com/ironclause/erl_pp.git" }
erl_pp = { path = "deps/erl_pp" }
#erl_tokenize = { git = "https://github.com/ironclause/erl_tokenize.git" }
erl_tokenize = { path = "deps/erl_tokenize" }

# Command line argument parser
clap = ">= 4.4.11"
glob = "0.3.1"
toml = { version = ">= 0.8.8", features = ["parse"] }
serde = { version = "1.0.193", features = ["derive"] }
trackable = ">= 1.3"

[dev-dependencies]
num = ">= 0.4"
